--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -69,15 +69,14 @@ a:hover {
 
 /* COLORS */
 .color-grid {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  display: flex;
   margin: auto;
 }
 
 .color-box {
   border: 1px solid #000;
-  width: 150px;
-  height: 100px;
+  width: 100%;
+  height: 120px;
   margin: 5px;
   color: #000000;
 }
@@ -85,6 +84,7 @@ a:hover {
 .color-box p {
   text-align: center;
   font-weight: bolder;
+  font-size: 16px;
 }
 
 .lavender-web {
@@ -143,7 +143,13 @@ li {
   list-style: none;
 }
 
-/* ---- FOOTER ---- */
+.text-heading {
+  margin-bottom: 0px;
+}
+
+.text-para {
+  margin: 25px 0px;
+} /* ---- FOOTER ---- */
 footer {
   font-family: Laila;
   font-size: 13px;
@@ -164,11 +170,22 @@ footer {
     color: #aeefff;
     font-weight: bolder;
   }
+
+  .color-box {
+    border: 1px solid #000;
+    width: 100%;
+    height: 120px;
+    margin: 5px;
+    color: #000000;
+  }
+  .color-box p {
+    font-size: 18px;
+  }
 }
 /* ---------min-width 1040--------- */
 @media (min-width: 1040px) {
   body {
-    /*  margin: 60px; */
+    margin: 65px;
   }
 }
 
@@ -180,7 +197,11 @@ footer {
   .color-box {
     width: 90%;
   }
-
+  .color-grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    margin: auto;
+  }
   .box {
     padding: 10px;
   }
