background color edit

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,7 @@ body {
   background: linear-gradient(to bottom, #685f74 40%, #7e5f8d 90%, #914a75);
   background-repeat: no-repeat;
   background-attachment: fixed;
-  background-color: #03305a;
+  background-color: #685f74;
   color: #ebebff;
   font-family: 'Fira Sans', sans-serif, Lato;
   font-weight: 300;
